# vb-radar-gun

./: .gitignore  README.md  human_results.csv  model_results.csv  pyproject.toml
vb_radar_gun/: __init__.py
vb_radar_gun/detection/: detections.py  detector.py  extensions.py
vb_radar_gun/helpers/: sahi.py
vb_radar_gun/velocity/: camera.py  estimator.py
velocity_estimator/: .gitignore  data_generator.py  data_prep.py  evaluate.py  metrics.py  model.py  train.py
