[tool.poetry]
name = "vb-radar-gun"
version = "0.1.0"
description = ""
authors = ["Kamil Zieliński <kamilkk.zielinski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
torch = "^2.5.1"
matplotlib = "^3.9.4"
pandas = "^2.2.3"
scikit-learn = "^1.6.0"
supervision = "^0.25.1"
ultralytics = "^8.3.49"
tqdm = "^4.67.1"
sahi = "^0.11.19"
streamlit = "^1.41.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
